--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>   
                 </div>
                 <div class="col-md-5 offset-1">
-                    <h3 class="pt-4 contact-h  fs-1 fw-bolder mb-5">About me</h3>
+                    <h3 class=" contact-h  fs-1 fw-bolder mb-5">About me</h3>
                     <p class="lead mt-4">Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.</p>
                     <p class="lead mt-4">Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.</p>
                     <p class="lead mt-4">Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Nulla porttitor accumsan tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
